--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Jarvis\\JarvisServiceProvider",
-                "App\\Providers\\ResponseMacroServiceProvider",
-                "App\\Providers\\RouteServiceProvider"
+                "Jarvis\\JarvisServiceProvider"
             ]
         }
     },
